--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sitemap": "^1.2.11",
     "gatsby-plugin-styled-components": "^2.0.5",
     "gatsby-plugin-stylus": "^1.1.14",
+    "react-burger-menu": "^2.2.3",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.1.4"
   }
